--- a/cassandra_version/pom.xml
+++ b/cassandra_version/pom.xml
@@ -45,6 +45,12 @@
             <groupId>com.datastax.oss</groupId>
             <artifactId>java-driver-query-builder</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.pengujian_sistem</groupId>
+            <artifactId>db2_version</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
