--- a/db2_version/src/main/resources/application.properties
+++ b/db2_version/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=3000
 
 spring.datasource.url=jdbc:db2://localhost:25000/SAMPLE
-spring.datasource.username=db2admin
+spring.datasource.username=db2inst1
 spring.datasource.password=db2inst1
